--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "pratt-calculator",
-  "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
-  "bin": {
-    "calc": "./index.js"
-  },
-  "scripts": {
-    "lint": "prettier -l '*.js' && eslint '*.js'",
-    "lint:fix": "prettier --write '*.js' && eslint --fix '*.js'",
-    "format": "prettier --write '**/*.js'",
-    "precommit": "npm run lint",
-    "prepack": "npm test",
-    "test": "node test.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jrop/pratt-calculator.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jrop/pratt-calculator/issues"
-  },
-  "homepage": "https://github.com/jrop/pratt-calculator#readme",
-  "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-jrop": "^0.0.1",
-    "husky": "^0.14.3",
-    "prettier": "^2.8.8",
-    "tape": "^4.9.0"
-  }
+	"name": "pratt-calculator",
+	"version": "0.1.0",
+	"description": "",
+	"main": "index.js",
+	"bin": {
+		"calc": "./index.js"
+	},
+	"scripts": {
+		"lint": "prettier -l '*.js' && eslint '*.js'",
+		"lint:fix": "prettier --write '*.js'",
+		"format": "prettier --write '**/*.js'",
+		"precommit": "npm run lint",
+		"prepack": "npm test",
+		"test": "node test.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/jrop/pratt-calculator.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/jrop/pratt-calculator/issues"
+	},
+	"homepage": "https://github.com/jrop/pratt-calculator#readme",
+	"devDependencies": {
+		"eslint": "^3.19.0",
+		"eslint-config-jrop": "^0.0.1",
+		"husky": "^0.14.3",
+		"prettier": "^2.8.8",
+		"tape": "^4.9.0"
+	}
 }
