--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"precommit": "npm run lint",
 		"prepack": "npm run build && npm test",
 		"test": "npm run build && bun run dist/test.js",
-		"test:watch": "bun --watch \"src/**/*.test.ts\"",
+		"test:watch": "bun test --watch",
 		"start": "npm run build && node dist/index.js"
 	},
 	"repository": {
