--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "token-value-calculator",
-	"version": "0.1.0",
+	"name": "unit-calculator",
+	"version": "1.0.0",
 	"description": "",
 	"main": "dist/index.js",
 	"type": "module",
@@ -21,15 +21,15 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/floscr/pratt-calculator.git"
+		"url": "git+https://github.com/tokens-studio/Unit-Calculator.git"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"bugs": {
-		"url": "https://github.com/floscr/pratt-calculator/issues"
+		"url": "https://github.com/tokens-studio/Unit-Calculator/issues"
 	},
-	"homepage": "https://github.com/floscr/pratt-calculator#readme",
+	"homepage": "https://github.com/tokens-studio/Unit-Calculator#readme",
 	"devDependencies": {
 		"@types/node": "^20.17.52",
 		"eslint": "^3.19.0",
