--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-	"name": "unit-calculator",
+	"name": "@tokens-studio/unit-calculator",
+	"private": false,
 	"version": "1.0.0",
 	"description": "",
 	"main": "dist/index.js",
@@ -38,5 +39,9 @@
 		"prettier": "^2.8.8",
 		"typescript": "^5.8.3",
 		"vitest": "^1.4.0"
+	},
+	"publishConfig": {
+		"access": "public",
+		"registry": "https://registry.npmjs.org/"
 	}
 }
