refactor: Cleanup file structure
chore: Remove unused imports

chore: Cleanup comments

chore: Add noImplicitAny

refactor: remove any types and add proper TypeScript type annotations

fix: resolve TypeScript type errors in defaultMathFunctions

fix: use type-only import for IUnitValue in config.ts

refactor: move CSS_UNITS to utils/constants.ts

chore: format

refactor: move to lib dir

refactor: move cli to own dir

chore: format

refactor: move files to lib directory and update imports

chore: remove dimensionsUnit example

chore: Remove comments

chore: Cleanup

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "start": "npm run build && node dist/index.js",
-    "cli": "node --loader ts-node/esm ./src/cli.ts",
+    "cli": "node --loader ts-node/esm ./src/cli/cli.ts",
     "link": "npm run build && npm link"
   },
   "repository": {
@@ -39,9 +39,5 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "files": [
-    "dist",
-    "LICENSE",
-    "README.md"
-  ]
+  "files": ["dist", "LICENSE", "README.md"]
 }
